@@ -6,6 +6,7 @@
 * Added possibility to implicitly specify data interfaces in constructors
   for lltl::pphash and lltl::phashset.
 * Removed Makefile.d. Dependencies are now automatically generated at the build stage.
+* Updated build scripts.
 
 === 1.0.10 ===
 * Updated module versions in dependencies.
